--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,13 @@
   
   
 
-  <link rel="stylesheet" href="http://blog.on-going.jpcss/style.css" />
+  <link rel="stylesheet" href="http://blog.on-going.jp/css/style.css" />
   
   
   <link href="http://blog.on-going.jp/index.xml" rel="alternate" type="application/rss+xml" title="on-going&#39;s Blog" />
   
   
-  <script type="text/javascript" src="http://blog.on-going.jpjs/bundle.js"></script>
+  <script type="text/javascript" src="http://blog.on-going.jp/js/bundle.js"></script>
   
 
 </head>
